--- a/projects/perception/object_detection_3d/demos/voxel_object_detection_3d/templates/index.html
+++ b/projects/perception/object_detection_3d/demos/voxel_object_detection_3d/templates/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>OpenDR activity recognition demo</title>
+  <title>OpenDR voxel object detection 3d demo</title>
 </head>
 
 <body style="background-color:black; text-align:center">
