--- a/projects/perception/object_tracking_2d/demos/fair_mot_deep_sort/templates/index.html
+++ b/projects/perception/object_tracking_2d/demos/fair_mot_deep_sort/templates/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>OpenDR activity recognition demo</title>
+  <title>OpenDR object detection 2d demo</title>
 </head>
 
 <body style="background-color:black; text-align:center">
